# marcadors

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  .taurignore  LICENSE  README.md  classificador.js  ecosystem.config.js  index.html  logger.js  package-lock.json  package.json  reglas.default.json  reglas.json  server.js  style.css
frontend/: index.html
js/: api.js  app.js  lector.js  ui.js
scripts/: build-sea.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: classificador.test.js
