[package]
name = "marcadors"
version = "1.0.0"
description = "Gestor de marcadors i enllaços amb classificació automàtica per categories"
authors = ["you"]
edition = "2021"

[lib]
name = "marcadors_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
